fixes spacing in share component

--- a/src/app/components/share/share.component.scss
+++ b/src/app/components/share/share.component.scss
@@ -6,7 +6,7 @@
 }
 
 .share-email-text {
-  margin: 60px auto 70px;
+  margin: 60px auto 40px;
 }
 
 .share-square-container {
